--- a/playbook-kde-neon.yml
+++ b/playbook-kde-neon.yml
@@ -42,10 +42,10 @@
     - include_tasks: tasks/kubuntu-restricted-extras.yml
     - include_tasks: tasks/other-packages.yml
     - include_tasks: tasks/version-dependent-packages.yml
-    - include_tasks: tasks/touchegg.yml
-      when: ansible_distribution_version is version('20.04', '>=')
-    - include_tasks: tasks/touchegg-kde-conf.yml
-      when: ansible_distribution_version is version('20.04', '>=')
+    #- include_tasks: tasks/touchegg.yml
+    #  when: ansible_distribution_version is version('20.04', '>=')
+    #- include_tasks: tasks/touchegg-kde-conf.yml
+    #  when: ansible_distribution_version is version('20.04', '>=')
     # Skype requires snap and does not work well in Ansible/Docker/Systemd
     #- include_tasks: tasks/skype.yml
     - include_tasks: tasks/amarok.yml # Amarok not yet available in Jammy
