--- a/tasks/vscode.yml
+++ b/tasks/vscode.yml
@@ -1,5 +1,6 @@
 ---
 - name: Add Microsoft APT repository
+  become: true
   ansible.builtin.deb822_repository:
     name: vscode
     types: [deb]
@@ -12,6 +13,7 @@
     enabled: yes
 
 - name: Install Visual Studio Code
+  become: true
   ansible.builtin.apt:
     update_cache: true
     name: code
